--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
           <button class="save-img">Save Image</button>
         </div>
       </div>
+      <footer>
+        <p>created with <b > &hearts; </b> by <small>dprincecoder</small></p>
+      </footer>
     </div>
 
     <script src="./app.js"></script>
